--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/2.modify-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/2.modify-locality.md
@@ -6,17 +6,17 @@
 
 Locality 的设置通常用于租户的副本数增加、减少或迁移：
 
-租户副本数增加
+* 租户副本数增加
 
-对集群中的某个租户，增加租户下 Partition 的副本数，一次只能增加一个。例如，租户从 3 副本变为 5 副本，需要将 Locality 由 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z3,F@z4,F@z5` 。
+   对集群中的某个租户，增加租户下 Partition 的副本数，一次只能增加一个。例如，租户从 3 副本变为 5 副本，需要将 Locality 由 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z3,F@z4,F@z5` ，具体操作可详见[增加副本](3.add-replica.md)。
 
-租户副本数减少
+* 租户副本数减少
 
-对集群内的某个租户减少其中 Partition 的副本数，一次只能减少一个。例如，租户从 5 副本变为 3 副本，需要将 Locality 由 `F@z1,F@z2,F@z3,F@z4,F@z5`  变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z3` 。
+   对集群内的某个租户减少其中 Partition 的副本数，一次只能减少一个。例如，租户从 5 副本变为 3 副本，需要将 Locality 由 `F@z1,F@z2,F@z3,F@z4,F@z5`  变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z3` ，具体操作可详见[减少副本](4.reduce-replicas.md)。
 
-租户副本迁移
+* 租户副本迁移
 
-对集群内的某个租户通过若干次 Locality 变更，调整租户的机房分布。例如：租户原先的 Locality 为 `F@z1,F@z2,F@z3` ，由于 z3 机房到期，需要调整为 z4，变更的为 Locality 为 `F@z1,F@z2,F@z4` ，需要做两次 Locality 变更：从 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z4` 。
+   对集群内的某个租户通过若干次 Locality 变更，调整租户的机房分布。例如，租户原先的 Locality 为 `F@z1,F@z2,F@z3` ，由于 z3 机房到期，需要调整为 z4，变更的为 Locality 为 `F@z1,F@z2,F@z4` ，需要做两次 Locality 变更，从 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z4` ，具体操作可详见[副本迁移](5.replica-migration.md)。
 
 ## 前提条件
 
@@ -39,7 +39,7 @@ Locality 的设置通常用于租户的副本数增加、减少或迁移：
 ## 操作步骤
 
 示例：
-将租户 mq_t1 的 Locality 修改为 `F{1}@sa128_obv4_1,F{1}@sa128_obv4_2,F{1}@sa128_obv4_3`。
+将租户 mq_t1 的 Locality 由 `FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2` 修改为 `F{1}@sa128_obv4_1,F{1}@sa128_obv4_2,F{1}@sa128_obv4_3`。
 
 1. 使用 root 用户登录到数据库的 sys 租户。
 
@@ -47,13 +47,34 @@ Locality 的设置通常用于租户的副本数增加、减少或迁移：
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 修改租户 mq_t1 的 Locality 。
+2. 进入 oceanbase 数据库。
+
+   ```sql
+   obclient>use oceanbase;
+   ```
+
+3. 查看修改前的 Locality 。
+
+   ```sql
+   obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
+   +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
+   | TENANT_ID | TENANT_NAME | TENANT_TYPE | PRIMARY_ZONE                           | LOCALITY                                                         |
+   +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
+   |         1 | sys         | SYS         | sa128_obv4_2;sa128_obv4_1,sa128_obv4_3 | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
+   |      1001 | META$1002   | META        | sa128_obv4_2;sa128_obv4_1,sa128_obv4_3 | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
+   |      1002 | midas0_3790 | USER        | sa128_obv4_2;sa128_obv4_1,sa128_obv4_3 | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
+   |      1003 | META$1004   | META        | sa128_obv4_1,sa128_obv4_2              | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2                       |
+   |      1004 | mq_t1       | USER        | sa128_obv4_1,sa128_obv4_2              | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2                       |
+   +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
+   ```
+
+4. 修改租户 mq_t1 的 Locality 。
 
    ```sql
    obclient>ALTER TENANT mq_t1 locality="F{1}@sa128_obv4_1,F{1}@sa128_obv4_2,F{1}@sa128_obv4_3";
    ```
 
-3. 查看 Locality 变更任务的执行状态。
+5. 查看 Locality 变更任务的执行状态。
 
    ```sql
     obclient>SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY';
@@ -65,3 +86,18 @@ Locality 的设置通常用于租户的副本数增加、减少或迁移：
    ```
 
    当 `JOB_STATUS` 为 `SUCCESS` 时，则说明 Locality 变更任务执行成功。
+
+6. 查看修改后的 Locality 。
+
+   ```sql
+   obclient>SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
+   +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
+   | TENANT_ID | TENANT_NAME | TENANT_TYPE | PRIMARY_ZONE                           | LOCALITY                                                         |
+   +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
+   |         1 | sys         | SYS         | sa128_obv4_2;sa128_obv4_1,sa128_obv4_3 | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
+   |      1001 | META$1002   | META        | sa128_obv4_2;sa128_obv4_1,sa128_obv4_3 | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
+   |      1002 | midas0_3790 | USER        | sa128_obv4_2;sa128_obv4_1,sa128_obv4_3 | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
+   |      1003 | META$1004   | META        | sa128_obv4_1,sa128_obv4_2              | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
+   |      1004 | mq_t1       | USER        | sa128_obv4_1,sa128_obv4_2              | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
+   +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
+   ```
