--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/2.partition.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/2.partition.md
@@ -10,7 +10,7 @@ OceanBase 数据库支持普通表和分区表。
 
 OceanBase 数据库的基本分区策略包括范围（Range）分区、列表（List）分区、哈希（Hash）分区、Key 分区等。
 
-## 示例
+## 分区表创建示例
 
 例如，创建了一个 List 分区表：
 
