--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/3.tablet.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/3.tablet.md
@@ -10,7 +10,7 @@ Tablet 与分区一一对应，分区作为用户创建的逻辑对象，而 Tab
 
 通过引入 Tablet 的概念，建立了分区到 Tablet 的映射。
 
-## 查看示例
+## 查看 Tablet 的基本信息
 
 所有的分片对象的基本信息可通过视图 `oceanbase.DBA_OB_TABLET_REPLICAS` 查看。
 
