--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/5.unit-group.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/5.unit-group.md
@@ -12,7 +12,7 @@ OceanBase 4.0 开始在租户资源管理上增加了限制，要求同一个租
 
 * 不再支持按 Zone 个性化配置租户的 Unit 个数，只能按照 Unit Group 维度整体调整，比如需要为租户水平扩容资源，调大 Unit 个数，只能所有 Zone 统一扩容；相应的，租户缩容的场景，只能按 Unit Group 整体删除 Unit。通过 Unit Group 机制，保证了不同 Zone 上的数据分布是同构的。
 
-## 查看示例
+## 查看 Unit Group 信息
 
 所有的 Unit，及其所属 Unit Group 可通过视图 `oceanbase.DBA_OB_UNITS` 查询。
 
