--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/6.ls-group.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/6.ls-group.md
@@ -12,7 +12,7 @@
 
 日志流组内的日志流个数随着租户 Primary Zone 配置的变化而动态变化，日志流组生命周期与 Unit Group 绑定。
 
-## 查看示例
+## 查看日志流和日志流组信息
 
 日志流及其所归属的日志流组可通过视图 `oceanbase.CDB_OB_LS` 查看。
 
