--- a/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/3.adjust-unit-number.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/3.adjust-unit-number.md
@@ -1,6 +1,10 @@
 # 通过调整 Unit Number 实现租户扩缩容
 
-本文介绍如何通过修改 Unit Number ，达到租户扩缩容的功能。
+租户扩容和缩容本质上是提高和降低租户的服务能力，包括计算能力和存储容量。可以通过提高单节点的服务能力达成，也可以通过增加服务节点达成。本文介绍如何通过修改 Unit Number，从而增加或减少服务节点，达到租户总服务能力的提升或降低，实现租户的扩容或缩容。
+
+## 使用限制
+
+OceanBase 数据库 V4.0.0 版本暂不支持调小 Unit Number。
 
 ## 前提条件
 
@@ -20,6 +24,8 @@
 
 ## 操作步骤
 
+下面以调整租户 mq_t1 的 Unit Number 为例来介绍操作方法。
+
 1. 使用 root 用户登录到数据库的 sys 租户。
 
     ```sql
@@ -29,13 +35,13 @@
 2. 进入 oceanbase 数据库。
 
     ```sql
-    obclient>USE oceanbase;
+    obclient>use oceanbase;
     ```
 
-3. 查看租户 mq_t1 信息。
+3. 查看租户 mq_t1 信息，获取其 TENANT_ID。
 
    ```sql
-    obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_ID = 1004;
+    obclient> SELECT * FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_NAME = 'mq_t1';
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
     | TENANT_ID | TENANT_NAME | TENANT_TYPE | CREATE_TIME                | MODIFY_TIME                | PRIMARY_ZONE                           | LOCALITY                                                         | PREVIOUS_LOCALITY | COMPATIBILITY_MODE | STATUS | IN_RECYCLEBIN | LOCKED |
     +-----------+-------------+-------------+----------------------------+----------------------------+----------------------------------------+------------------------------------------------------------------+-------------------+--------------------+--------+---------------+--------+
