--- a/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/4.adjust-primary-zone.md
+++ b/zh-CN/6.manage/3.replica-management/5.tenant-expansion-and-contraction/4.adjust-primary-zone.md
@@ -13,7 +13,7 @@
 2. 进入 oceanbase 数据库。
 
     ```sql
-    obclient>USE oceanbase;
+    obclient>use oceanbase;
     ```
 
 3. 查询租户 mq_t1 的基本信息，例如 `locality`、`primary zone` 等属性。
