--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/1.view-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/1.view-locality.md
@@ -12,10 +12,10 @@
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 进入 OceanBase 数据库。
+2. 进入 oceanbase 数据库。
 
    ```sql
-   obclient>USE oceanbase;
+   obclient>use oceanbase;
    ```
 
 3. 查询 `oceanbase.DBA_OB_TENANTS` ，获取租户的副本类型及分布。
