--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/4.reduce-replicas.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/4.reduce-replicas.md
@@ -1,13 +1,30 @@
 # 减少副本
 
-本文介绍通过修改 Locality ，来减少副本的操作。
+本文介绍如何通过修改集群中某个租户的 Locality 来减少租户下 Partition 的副本数。
 
-修改 Locality 可以参考文档[修改 Locality](2.modify-locality.md)。
+有关修改 Locality 的详细操作和注意事项，参见 [修改 Locality](2.modify-locality.md)。
+
+## 前提条件
+
+变更 Locality 之前，需要确认待变更的 Zone 上资源单元和资源池的状态。如果 Zone 上的 OBServer 资源不足导致无法存放租户需要的资源单元，则将导致无法进行 Locality 变更。
+
+有关 Zone 上资源单元和资源池的状态的检查方法，请参见 [查看集群的资源信息](../../../../7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md)。
+
+## 注意事项
+
+* 租户的 Locality 不可以为空。
+
+* 当租户的 Locality 发生变更时，在该租户下，所有表的副本分布情况也会随之变化。
+
+* 在旧一轮租户 Locality 没有完成变更时，新一轮的租户 Locality 变更不允许被执行。
+
+* Locality 变更一次只能执行一个动作，例如把 Zone3 替换为 Zone4 ，不能直接替换，可以先增加一个 Zone4，然后再减少一个 Zone3。
+
+* 通过增加副本会导致租户 Locality 与 租户 Primary Zone 不匹配，如果增加的 Zone 参与切主，则需要修改 Primary Zone；如果增加的 Zone 不参与切主，则不需要修改 Primary Zone。
 
 ## 操作步骤
 
-示例：
-将租户 mysql001 的 Locality 由 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 修改为 `FULL{1}@zone1, FULL{1}@zone2` 。
+示例：通过修改租户 mysql001 的 Locality，由 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 修改为 `FULL{1}@zone1, FULL{1}@zone2` ，减少租户的副本数。
 
 <main id="notice" type='explain'>
    <h4>说明</h4>
@@ -20,7 +37,13 @@
    obclient -h172.30.xxx.xxx -P2883 -uroot@sys -pxxxx -A
    ```
 
-2. 查看租户 mysql001 修改前的 Locality 。
+2. 进入 oceanbase 数据库。
+
+   ```sql
+   obclient>use oceanbase;
+   ```
+
+3. 查看租户 mysql001 修改前的 Locality 。
 
    ```sql
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
@@ -33,13 +56,15 @@
    +-----------+-------------+-------------+-------------------+---------------------------------------------+
    ```
 
-3. 修改租户 mysql001 的 Locality 。
+   可以看到租户 mysql001 在 zone1、zone2、zone3 上分别有一个全能型副本。
+
+4. 修改租户 mysql001 的 Locality 。
 
    ```sql
    obclient>ALTER TENANT mysql001 locality="FULL{1}@zone1, FULL{1}@zone2";
    ```
 
-4. 查看 Locality 变更任务的执行状态。
+5. 查看 Locality 变更任务的执行状态。
 
    ```sql
     obclient>SELECT * FROM oceanbase.DBA_OB_TENANT_JOBS WHERE JOB_TYPE = 'ALTER_TENANT_LOCALITY';
@@ -52,7 +77,7 @@
 
    当 `JOB_STATUS` 为 `SUCCESS` 时，则说明 Locality 变更任务执行成功。
 
-5. 查看租户 mysql001 修改后的 Locality 。
+6. 查看租户 mysql001 修改后的 Locality 。
 
    ```sql
    obclient> SELECT TENANT_ID,TENANT_NAME,TENANT_TYPE,PRIMARY_ZONE,LOCALITY FROM oceanbase.DBA_OB_TENANTS;
@@ -65,4 +90,4 @@
    +-----------+-------------+-------------+-------------------+---------------------------------------------+
    ```
 
-通过步骤 2 与步骤 5 的查询比较， mysql001 的 Locality 由原先的 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 变为 `FULL{1}@zone1, FULL{1}@zone2` 。
+通过步骤 2 与步骤 5 的查询比较， 租户 mysql001 的 Locality 由原来的 `FULL{1}@zone1, FULL{1}@zone2, FULL{1}@zone3` 变为 `FULL{1}@zone1, FULL{1}@zone2` ，租户 mysql001 的副本数减少。
