--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.replica-migration.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/5.replica-migration.md
@@ -1,8 +1,6 @@
 # 副本迁移
 
-本文介绍如何进行副本迁移。
-
-副本迁移，又称 Unit 迁移，描述的是在单个 Zone 内部，Unit 在节点之间的迁移。副本迁移只涉及副本在 Zone 内部的位置变更，不涉及副本个数、副本类型的变更。适用于节点故障场景和负载均衡场景。
+副本迁移，又称 Unit 迁移，描述的是在单个 Zone 内部，Unit 在节点之间的迁移。副本迁移只涉及副本在 Zone 内部的位置变更，不涉及副本个数、副本类型的变更。适用于节点故障场景和负载均衡场景。本文介绍如何进行副本迁移。
 
 ## 操作步骤
 
