--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/6.view-the-location-change-record.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/6.view-the-location-change-record.md
@@ -2,11 +2,9 @@
 
 本文介绍如何通过视图 `oceanbase.DBA_OB_TENANT_JOBS` 查看 locality 的变更记录。
 
-关于视图 `oceanbase.DBA_OB_TENANT_JOBS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANT_JOBS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/57.oceanbase-dba_ob_tenant_jobs-of-mysql-mode.md) 。
+有关视图 `oceanbase.DBA_OB_TENANT_JOBS` 的详细介绍，参见 [oceanbase.DBA_OB_TENANT_JOBS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/57.oceanbase-dba_ob_tenant_jobs-of-mysql-mode.md) 。
 
 ## 操作步骤
-
-查看 Locality 变更任务的执行状态
 
 1. 使用 root 用户登录到数据库的 sys 租户。
 
