--- a/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/4.log-stream.md
+++ b/zh-CN/6.manage/3.replica-management/4.replica-fine-granularity/4.log-stream.md
@@ -12,9 +12,9 @@ RedoLog 是基于 Paxos 协议实现的日志模块，TxCrMgr 是事务管理结
 
 ![日志流](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/easy-of-use/manage/replica-management/replica-fine-granularity/log-stream.png)
 
-## 查看示例
+## 查看日志流相关信息
 
-1. 通过视图 `oceanbase.DBA_OB_LS` 查看本租户所有日志流的基本信息，包括状态、日志进度等。
+* 通过视图 `oceanbase.DBA_OB_LS` 查看本租户所有日志流的基本信息，包括状态、日志进度等。
 
     有关 `oceanbase.DBA_OB_LS` 视图的详细信息，参见 [oceanbase.DBA_OB_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/176.oceanbase-dba_ob_ls-of-mysql-mode.md)
 
@@ -35,13 +35,13 @@ RedoLog 是基于 Paxos 协议实现的日志模块，TxCrMgr 是事务管理结
       <p>以上语句可在系统租户和用户租户执行，以查看本租户对应的日志流。<br>例如上例在系统租户执行，所示为系统租户仅有的一个 1 号日志流。</p>
     </main>
 
-2. 通过系统租户的 `oceanbase.CDB_OB_LS` 视图可以查看所有租户的日志流信息。
+* 通过系统租户的 `oceanbase.CDB_OB_LS` 视图可以查看所有租户的日志流信息。
 
     有关 `oceanbase.CDB_OB_LS` 视图的详细信息，参见 [oceanbase.CDB_OB_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/175.oceanbase-cdb_ob_ls-of-mysql-mode.md)
 
     示例如下：
 
-    以查询租户 mq_t1 的日志流信息为例
+    以查询租户 mq_t1 的日志流信息为例。
 
     ```sql
 
@@ -79,18 +79,16 @@ RedoLog 是基于 Paxos 协议实现的日志模块，TxCrMgr 是事务管理结
     2 rows in set 
     ```
 
-    根据查询结果，1004 租户为 mq_t1，其 `PRIMARY_ZONE = 'sa128_obv4_1 ;sa128_obv4_2,sa128_obv4_3'` ，`unit_num = 1`。
+    根据查询结果，1004 租户为 mq_t1，其 `PRIMARY_ZONE = 'sa128_obv4_1 ;sa128_obv4_2,sa128_obv4_3'` ，`unit_num = 1`。所以共有 1 条用户表数据的日志流，其 `LS_ID =  1001` 。另一条 `LS_ID = 1` 的日志流负责了用户租户下的系统表数据。
 
-    所以一共有 1 条用户表数据的日志流，其 `LS_ID =  1001`。另一条 `LS_ID = 1` 的日志流负责了用户租户下的系统表数据。
-
-3. 通过 `oceanbase.DBA_OB_TABLET_TO_LS` 视图维护了 Tablet 到日志流的映射关系，从而获取 Tablet 位置信息。
+* `oceanbase.DBA_OB_TABLET_TO_LS` 视图维护了 Tablet 到日志流的映射关系，从而获取 Tablet 位置信息。
 
     有关 `oceanbase.DBA_OB_TABLET_TO_LS` 视图的详细信息，参见 [oceanbase.DBA_OB_TABLET_TO_LS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/56.oceanbase-dba_ob_tablet_to_ls-of-mysql-mode.md)
 
     示例如下：
 
     ```sql
-    obcllient> SELECT * FROM oceanbase.DBA_OB_TABLET_TO_LS limit 10;
+    obclient> SELECT * FROM oceanbase.DBA_OB_TABLET_TO_LS limit 10;
     +-----------+-------+
     | TABLET_ID | LS_ID |
     +-----------+-------+
