--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/10.modify-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/10.modify-a-zone.md
@@ -1,6 +1,10 @@
 # 修改 Zone
 
-您可以修改 Zone 的 Region 及 IDC 信息。
+修改 Zone 主要修改 Zone 所属的 Region 及 IDC 信息。
+
+## 使用限制
+
+当前不支持修改 Zone 的 `ZONE_TYPE`。
 
 ## 操作步骤
 
