--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/9.delete-a-zone.md
@@ -6,9 +6,9 @@
 
 删除 Zone 前，需要确认以下事项：
 
-1. 请确认该 Zone 下已不存在节点，查看 Zone 内节点的相关操作可参见 [查看节点](2.view-an-observer.md)。
+* 请确认该 Zone 下已不存在节点，查看 Zone 内节点的相关操作可参见 [查看节点](2.view-an-observer.md)。
 
-2. 请确认该 Zone 已停止。
+* 请确认该 Zone 已停止。
 
   停止 Zone 的语句如下：
 
