--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/2.tomcat-connection-pool-configuration-example-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/2.tomcat-connection-pool-configuration-example-of-mysql-mode.md
@@ -7,7 +7,7 @@
 Tomcat 连接池的配置文件修改示例如下。
 
 ```xml
-<Resource name="jdbc"
+Resource name="jdbc"
 auth="Container"
 type="javax.sql.DataSource"
 maxActive="100" //一个数据库在此服务器上所能打开的最大连接数
@@ -16,7 +16,7 @@ maxWait="10000" //最大等待时间。10000毫秒
 username="root"
 password=""
 driverClassName="com.oceanbase.jdbc.Driver"
-url="jdbc:oceanbase://10.100.xxx.xxx:18815/test?characterEncoding=UTF-8"/>
+url="jdbc:oceanbase://10.100.xxx.xxx:18815/test?characterEncoding=UTF-8"
 ```
 
 ## 配置项目
