--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
@@ -8,10 +8,10 @@
 
 * 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
-<main id="notice" type='explain'>
-   <h4>说明</h4>
-   <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。</p>
-</main>
+  <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>当前登录租户所属的租户模式可以由 <code>sys</code> 租户通过查询 <code>oceanbase.DBA_OB_TENANTS</code> 视图进行确认。</p>
+  </main>
 
 * 请确认您已拥有待操作的表的 `DELETE` 权限。如果使用 `TRUNCATE TABLE` 语句清空表数据，则还需要拥有该表的 `CREATE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
@@ -61,7 +61,7 @@ Query OK, 1 row affected
   Query OK, 3 row affected
   ```
 
-  当表中数据记录多达百万以上，一次性执行删除可能会出现性能问题，建议根据表内的信息使用 `WHERE` 条件进行分批删除，或者直接 [使用 TRUNCATE TABLE 语句清空表数据](#使用%20truncate%20table%20语句清空表数据)。
+  当表中数据记录多达百万以上，一次性执行删除可能会出现性能问题，建议根据表内的信息使用 `WHERE` 条件进行分批删除，或者直接 **使用 TRUNCATE TABLE 语句清空表数据**。
 
 * 筛选表 `t_insert` 中 `value` 列数据，分别执行多条语句分批删除 `value < 10000`，`value < 20000`，`value < 30000` 的数据。
 
