--- a/zh-CN/5.administrator-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in-1/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
+++ b/zh-CN/5.administrator-guide/11.operation-and-maintenance-management/2.scale-out-and-scale-in-1/3.scale-in-and-scale-out-of-tenant-resources/2.by-modifying-unit_num.md
@@ -1,18 +1,14 @@
 # 通过修改 UNIT_NUM
 
-对租户内资源的扩容和缩容还可以通过修改资源池中的 `UNIT_NUM` 来实现。
+对租户内资源的扩容还可以通过调大资源池中的 `UNIT_NUM` 来实现。当前版本暂不支持通过调小资源池中的 UNIT_NUM 来进行缩容。
 
 ## 前提条件
 
-在进行租户的扩容和缩容操作前，需要进行以下操作：
+在进行租户的扩容操作前，需要进行以下操作：
 
 * 由于空闲的资源池会被计算为占用的资源，故在扩容前，如果有租户被删除，建议与租户对应的资源池也一并删除，以便释放资源。
 
   删除资源池的相关操作请参见 [删除资源池](../../../6.basic-database-management/3.manage-resources/5.manage-resource-pools-1/7.delete-a-resource-pool.md)。
-  
-* 进行租户缩容前，建议进行一轮转储以便释放租户正在使用的内存。
-
-  手动触发转储的相关操作请参见 [手动触发转储](../../../6.basic-database-management/5.manage-data-storage/1.dump-management-1/3.trigger-dump-manually-1.md)。
   
 * 查看集群中资源的分配情况，了解集群中资源的使用情况。
 
@@ -40,7 +36,7 @@ obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
 
 ### 调大 UNIT_NUM
 
-随着业务量的不断变大，每个 Zone 上 2 个资源单元已经无法承载当前的业务量，因此需要考虑调大 `UNIT_NUM` 来提高租户的服务能力，以满足新的业务需求。
+随着业务量的不断变大，每个 Zone 上 1 个资源单元已经无法承载当前的业务量，因此需要考虑调大 `UNIT_NUM` 来提高租户的服务能力，以满足新的业务需求。
 
 1. 使用 `root` 用户登录到数据库的 `sys` 租户。
 
@@ -88,7 +84,7 @@ obclient> CREATE TENANT MySQL resource_pool_list=('pool1');
 
 ## 更多信息
 
-在租户的扩容和缩容操作中，您可以借助以下内部表或视图来获取租户资源相关的信息：
+在租户的扩容操作中，您可以借助以下内部表或视图来获取租户资源相关的信息：
 
 * oceanbase.DBA_OB_UNIT_CONFIGS
 
