--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -6,14 +6,31 @@
 
 * 调整部署场景：调整集群的部署架构时，如果调整租户的 Locality 属性后使得某 Zone 内不再分布有任何租户的 Unit，可以通过 Stop Zone ->  Delete Server -> Delete Zone 等一系列操作下线该 Zone。
 
-## 背景信息
+## 注意事项
 
 Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元（称为 Unit ）会在同一个 Zone 中进行迁移。Unit 的迁移动作是 Unit 自动均衡的过程，主要由 RootService 控制。待 Unit 迁移成功，Delete Server 操作即可执行成功。如果您想要选择待删除节点上 Unit 迁移的目标机器，可以手动执行 Unit 迁移。
 
 <main id="notice" type='notice'>
             <h4>注意</h4>
-            <p>删除节点会减少可用资源，如果同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，故在执行删除节点之前建议先查询 <code>oceanbase.GV$OB_SERVERS</code> 视图判断 Zone 内各 OBServer 服务器的资源使用情况。 </p>
-          </main>
+            <p>删除节点会减少可用资源，如果同 Zone 中其他节点的剩余资源不足以容纳待删除节点上的 Unit，将会导致 Unit 迁移失败，故在执行删除节点之前建议先查询 <code>oceanbase.GV$OB_SERVERS</code> 视图判断 Zone 内各节点的资源使用情况。 </p>
+</main>
+
+Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的网络资源和 IO 资源，从而使迁移流量与业务流量叠加，并导致业务流量受影响。为了避免业务流程受影响：
+
+* 可以先执行 Stop Zone 操作后再执行 Delete Server 操作，确保两种流量不发生叠加。
+
+  Stop Zone 的相关操作请参见 [隔离节点](6.isolation-a-node.md)。
+
+* 也可以调整迁移任务的相关配置项来控制迁移速度。
+   
+  迁移任务相关的配置项如下表所示。
+
+  |           配置项名      |                                           描述                                              |
+  |------------------------|---------------------------------------------------------------------------------------------|
+  | balancer_idle_time     | 集群级配置项，可以控制每次发起迁移任务的时间间隔。默认值为 5m，表示 5 分钟，取值范围为 [10s, +∞)。 |
+  | sys_bkgd_net_percentage| 集群级配置项，可以控制迁移任务占用网卡带宽的百分比。默认值为 60，取值范围为 [0, 100]。            |
+
+  查看并修改各配置项值的相关操作请参见 [修改集群配置项](13.modify-cluster-parameters.md）。
 
 ## 操作步骤
 
@@ -119,7 +136,7 @@ Delete Server 操作涉及到负载均衡，被删除的节点上的资源单元
 
    * `zone_name`：待删除的节点所属的 Zone。如果需要删除多个节点，多个节点要求必须在同一 Zone 内。
 
-   删除 `zone1` 中的一台 OBServer，示例如下：
+   删除 `zone1` 中的一台 OBServer 服务器，示例如下：
 
    ```sql
    obclient [(none)]> ALTER SYSTEM DELETE SERVER "172.xx.xx.xx:2882" zone='zone1'
