--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/5.delete-a-node.md
@@ -47,8 +47,8 @@ Unit 自动迁移过程中，迁移任务会占用迁出节点与迁入节点的
 2. （可选）手动迁移待删除节点上的 Unit。
 
    <main id="notice" type='explain'>
-            <h4>说明</h4>
-            <p>建议您手动迁移待删除的节点上的 Unit 后再执行 Delete Server 操作。</p>
+            <h4>注意</h4>
+            <p>下线节点时，建议您先手动迁移待删除的节点上的 Unit 后再执行 Delete Server 操作。</p>
    </main>
 
    1. 查看当前 Unit 分布，获取待迁移的 Unit 的 ID。
