--- a/en-US/7.reference/7.command-line-tools/7.ob-admin/1.overview-of-ob_admin.md
+++ b/en-US/7.reference/7.command-line-tools/7.ob-admin/1.overview-of-ob_admin.md
@@ -42,7 +42,7 @@ archive_tool parses archived log files. Archived files are divided into the foll
 * Index files: index files of the index directory corresponding to data files.
 * archive_key files: files that provide the archive_key information about auxiliary files.
 
-For more information, see [archive_tool](../1.ob-admin/2.archive_tool.md).
+For more information, see [archive_tool](../7.ob-admin/2.archive_tool.md).
 
 ### clog_tool
 
@@ -52,15 +52,15 @@ clog_tool has the following features:
 * Measure the proportion of each module in the clog files.
 * Search for logs by a specified field.
 
-For more information, see [clog_tool](../1.ob-admin/3.clog/3.clog_tool.md).
+For more information, see [clog_tool](3.clog/3.clog_tool.md).
 
 ### dumpsst
 
-dumpsst displays the content `block_file`, such as superblocks, macroblocks, macroblock meta, sstable, and sstable meta. Generally, you can use it to trace online issues and locate data issues. For more information, see [dumpsst](../1.ob-admin/5.dumpsst.md).
+dumpsst displays the content `block_file`, such as superblocks, macroblocks, macroblock meta, sstable, and sstable meta. Generally, you can use it to trace online issues and locate data issues. For more information, see [dumpsst](../7.ob-admin/5.dumpsst.md).
 
 ### dump_backup
 
-dump_backup parses the data content for physical backup. For more information, see [dump_backup](../1.ob-admin/6.dump_backup.md).
+dump_backup parses the data content for physical backup. For more information, see [dump_backup](../7.ob-admin/6.dump_backup.md).
 
 > **Note**
 >
