--- a/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/3.log-archive/1.preparation-before-log-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/2.backup-and-recovery-management/3.log-archive/1.preparation-before-log-backup.md
@@ -64,7 +64,7 @@
 
                 配置为该模式后，当您通过自动方式清理归档文件时，对于满足清理要求的归档文件，系统会给这些文件设置标签，标签的 `key` 为 `"delete_mode"`， `value` 为 `"tagging"`，以便后续您可以通过设置的标签在 `OSS` 上对这些文件的生命周期进行管理。
 
-            设置 `delete` 模式或 `tagging` 模式后，自动清理归档数据的相关操作请参见 [自动清理归档的数据](../5.cleaning-up-backed-up-data/1.cleaning-up-backed-up-data-automatically.md)。
+            设置 `delete` 模式或 `tagging` 模式后，自动清理归档数据的相关操作请参见 [自动清理归档的数据](../5.clear-backup-data/1.cleaning-up-backed-up-data-automatically.md)。
 
             当归档目的端的介质为 OSS 时，设置归档目的端，并配置 `tagging` 清理模式的示例如下：
 
