--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/209.dba_ob_restore_history-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/209.dba_ob_restore_history-of-oracle-mode.md
@@ -21,8 +21,8 @@
 | START_TIMESTAMP        | TIMESTAMP(6) WITH LOCAL TIME ZONE | YES  | 恢复任务开始时间戳|
 | FINISH_TIMESTAMP       | TIMESTAMP(6) WITH LOCAL TIME ZONE | YES  | 恢复任务结束时间戳 |
 | STATUS                 | VARCHAR2(64) | NO | 恢复结果: <ul> <li> `SUCCESS` : 表示恢复成功 </li> <li> `FAILED` : 表示恢复失败 </li></ul>|
-| BACKUP_PIECE_LIST | CLOB | NO | 恢复依赖的日志归档分片路径列表, 分片间以 `,` 分隔, 例如: `file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/archive/2_1_2,file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/archive/2_1_3` |
-| BACKUP_SET_LIST | CLOB | NO | 恢复依赖的数据备份集路径列表, 备份集间以 `,` 分隔，例如: `file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/data/backup_set_1_full,file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/data/backup_set_2_inc`  |
+| BACKUP_PIECE_LIST | CLOB | NO | 恢复依赖的日志归档分片路径列表, 分片间以 `,` 分隔, 例如：`file:///data/nfs/backup/archive/2_1_2,file:///data/nfs/backup/archive/2_1_3` |
+| BACKUP_SET_LIST | CLOB | NO | 恢复依赖的数据备份集路径列表, 备份集间以 `,` 分隔，例如：`file:///data/nfs/backup/data/backup_set_1_full,file:///data/nfs/backup/data/backup_set_2_inc`  |
 | BACKUP_CLUSTER_VERSION | NUMBER(38)   | NO   | 备份源集群版本号 |
 | LS_COUNT               | NUMBER(38)   | NO   | 待恢复的日志流总量 |
 | FINISH_LS_COUNT        | NUMBER(38)   | NO   | 完成恢复的日志流数量 |
