--- a/zh-CN/7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/4.data-protection/4.recycle-bin.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/4.data-protection/4.recycle-bin.md
@@ -4,9 +4,9 @@
 
 ## 回收站支持的对象
 
-如下表所示，在当前版本中，支持进入回收站的对象有索引、表和库。
+在当前版本中，支持进入回收站的对象有索引、表、库和租户，各模式的回收站中支持的对象如下表所示。
 
-|     模式     | **索引（Index）** | **表（Table）** | **数据库（Database）** | **租户（Tenant）** |
+|     模式     | INDEX（索引） | TABLE（表）   | DATABASE（数据库） | TENANT（租户） |
 |------------|---------------|--------------|-------------------|----------------|
 | **MySQL**  | 支持             | 支持            | 支持                 | 支持              |
 | **Oracle** | 支持             | 支持            | 不支持                | 不支持              |
