--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/4.add-a-partition-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/4.add-a-partition-of-mysql-mode.md
@@ -6,7 +6,7 @@
 
 OceanBase 数据库的 MySQL 模式中，一级分区表和二级分区表对添加分区操作的具体支持情况如下表所示。
 
-|                                                        分区表                                                         || 添加一级分区 | 添加二级分区 |
+|  分区表 |      分区类型                                                                                               | 添加一级分区 | 添加二级分区 |
 |-------|-------------------------------------------------------------------------------------------------------------|--------|--------|
 | 一级分区表 | Range / Range Columns / List / List Columns                                                                 | 支持     | -      |
 | 一级分区表 | Hash / Key                                                                                                  | 不支持    | -      |
