--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/130.oceanbase-dba_ob_restore_history-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/130.oceanbase-dba_ob_restore_history-of-mysql-mode.md
@@ -18,8 +18,8 @@
 | START_TIMESTAMP                  | timestamp(6)        | 恢复任务开始时间戳  |
 | FINISH_TIMESTAMP                 | timestamp(6)        | 恢复任务结束时间戳  |
 | STATUS                           | varchar(64)         | 恢复结果: <ul> <li> `SUCCESS` : 表示恢复成功 </li> <li> `FAILED` : 表示恢复失败 </li></ul> |
-| BACKUP_PIECE_LIST                | longtext            | 恢复依赖的日志归档分片路径列表, 分片间以 `,` 分隔, 例如: `file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/archive/2_1_2,file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/archive/2_1_3` |
-| BACKUP_SET_LIST                  | longtext            | 恢复依赖的数据备份集路径列表, 备份集间以 `,` 分隔，例如: `file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/data/backup_set_1_full,file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/data/backup_set_2_inc` |
+| BACKUP_PIECE_LIST                | longtext            | 恢复依赖的日志归档分片路径列表, 分片间以 `,` 分隔, 例如：`file:///data/nfs/backup/archive/2_1_2,file:///data/nfs/backup/archive/2_1_3` |
+| BACKUP_SET_LIST                  | longtext            | 恢复依赖的数据备份集路径列表, 备份集间以 `,` 分隔，例如：`file:///data/nfs/backup/data/backup_set_1_full,file:///data/nfs/backup/data/backup_set_2_inc` |
 | BACKUP_CLUSTER_VERSION           | bigint(20)          | 备份源集群版本号 |
 | LS_COUNT                         | bigint(20)          | 恢复日志流总量   |
 | FINISH_LS_COUNT                  | bigint(20)          | 完成恢复日志流数量  |
