--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/96.oceanbase-cdb_ob_restore_progress-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/96.oceanbase-cdb_ob_restore_progress-of-mysql-mode.md
@@ -23,8 +23,8 @@
 | RESTORE_SCN_DISPLAY              | varchar(26)         | 用户指定的恢复位点的时间戳表示  |
 | STATUS                           | longtext            | 恢复状态: 系统租户的恢复任务与被恢复租户的恢复任务状态不一致。<br>系统租户: <ul><li> `CREATE_TENANT` : 创建租户，此阶段系统租户创建被恢复租户 </li> <li> `WAIT_TENANT_RESTORE_FINISH` : 等待被恢复租户恢复结束 </li> <li> `RESTORE_SUCCESS` : 恢复租户成功 </li> <li> `RESTORE_FAIL` : 恢复租户失败 </li></ul> <br>被恢复租户: <ul><li> `RESTORE_PRE` : 恢复前准备。在设置加密的情况下，设置加密信息 </li> <li> `RESTORE_CREATE_INIT_LS` : 创建日志流 </li> <li> `RESTORE_WAIT_LS` : 等待日志流恢复完成 </li> <li> `POST_CHECK` : 检查租户角色，恢复成备库 </li> <li> `UPGRADE` : 升级，如果是跨版本恢复，租户会执行升级流程 </li> <li> `RESTORE_SUCCESS` : 恢复成功 </li> <li> `RESTORE_FAIL` : 恢复失败 </li></ul> |
 | START_TIMESTAMP                  | varchar(26)         | 恢复任务开始时间戳  |
-| BACKUP_SET_LIST                  | longtext            | 恢复依赖的数据备份集路径列表, 备份集间以 `,` 分隔，例如: `file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/data/backup_set_1_full,file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/data/backup_set_2_inc`  |
-| BACKUP_PIECE_LIST                | longtext            | 恢复依赖的日志归档分片路径列表, 分片间以 `,` 分隔, 例如: `file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/archive/2_1_2,file:///data/nfs1/chongrong/backup//ob_backup_oracle_tenant/archive/2_1_3`  |
+| BACKUP_SET_LIST                  | longtext            | 恢复依赖的数据备份集路径列表, 备份集间以 `,` 分隔，例如：`file:///data/nfs/backup/data/backup_set_1_full,file:///data/nfs/backup/data/backup_set_2_inc`  |
+| BACKUP_PIECE_LIST                | longtext            | 恢复依赖的日志归档分片路径列表, 分片间以 `,` 分隔, 例如：`file:///data/nfs/backup/archive/2_1_2,file:///data/nfs/backup/archive/2_1_3`   |
 | TOTAL_BYTES                      | bigint(20)          | 恢复总字节数  |
 | TOTAL_BYTES_DISPLAY              | varchar(27)         | 恢复总字节数，以存储容量单位显示  |
 | FINISH_BYTES                     | bigint(20)          | 完成恢复字节数  |
