--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/2.modify-locality.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/2.modify-locality.md
@@ -4,7 +4,7 @@
 
 ## Locality 应用场景
 
-Locality 的设置通常用于租户的副本数增加、减少或迁移：
+Locality 的设置通常用于租户的副本数增加、减少或调整副本分布：
 
 * 租户副本数增加
 
@@ -14,9 +14,9 @@ Locality 的设置通常用于租户的副本数增加、减少或迁移：
 
    对集群内的某个租户减少其中 Partition 的副本数，一次只能减少一个。例如，租户从 5 副本变为 3 副本，需要将 Locality 由 `F@z1,F@z2,F@z3,F@z4,F@z5`  变更为 `F@z1,F@z2,F@z3,F@z4` ，再将 Locality 由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z3` ，具体操作可详见[减少副本](4.reduce-replicas.md)。
 
-* 租户副本迁移
+* 租户副本分布调整
 
-   对集群内的某个租户通过若干次 Locality 变更，调整租户的机房分布。例如，租户原先的 Locality 为 `F@z1,F@z2,F@z3` ，由于 z3 机房到期，需要调整为 z4，变更的为 Locality 为 `F@z1,F@z2,F@z4` ，需要做两次 Locality 变更，从 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z4` ，具体操作可详见[副本迁移](5.replica-migration.md)。
+   对集群内的某个租户通过若干次 Locality 变更，调整租户的机房分布。例如，租户原先的 Locality 为 `F@z1,F@z2,F@z3` ，由于 z3 机房到期，需要调整为 z4，变更的为 Locality 为 `F@z1,F@z2,F@z4` ，需要做两次 Locality 变更，从 `F@z1,F@z2,F@z3` 变更为 `F@z1,F@z2,F@z3,F@z4` ，再由 `F@z1,F@z2,F@z3,F@z4` 变更为 `F@z1,F@z2,F@z4` ，具体操作可详见[调整副本分布](5.adjust-replica-distribution.md)。
 
 ## 前提条件
 
@@ -101,3 +101,9 @@ Locality 的设置通常用于租户的副本数增加、减少或迁移：
    |      1004 | mq_t1       | USER        | sa128_obv4_1,sa128_obv4_2              | FULL{1}@sa128_obv4_1, FULL{1}@sa128_obv4_2, FULL{1}@sa128_obv4_3 |
    +-----------+-------------+-------------+----------------------------------------+------------------------------------------------------------------+
    ```
+
+## 相关文档
+
+* 关于视图 `DBA_OB_TENANTS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANTS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md) 。
+
+* 关于视图 `DBA_OB_TENANT_JOBS` 的介绍可以详见视图 [oceanbase.DBA_OB_TENANT_JOBS](../../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/57.oceanbase-dba_ob_tenant_jobs-of-mysql-mode.md) 。
