--- a/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/7.replica-migration.md
+++ b/zh-CN/6.manage/3.replica-management/2.replica-distribution/2.common-operations/7.replica-migration.md
@@ -15,7 +15,7 @@
 2. 进入 oceanbase 数据库。
 
     ```sql
-    obclient>USE oceanbase;
+    obclient>use oceanbase;
     ```
 
 3. 查询租户 mq_t1 的 tenant_id。
