--- a/zh-CN/6.manage/2.tenant-management/1.tenant-introduction.md
+++ b/zh-CN/6.manage/2.tenant-management/1.tenant-introduction.md
@@ -1,6 +1,6 @@
 # 租户介绍
 
-租户是集群之上的递进概念，OceanBase 数据库采用了多租户架构。
+租户是集群之上的递进概念，OceanBase 数据库采用了多租户架构。多租户架构适用于资源整合、SaaS服务等场景，同时也降低了运维复杂度。
 
 集群偏向于部署层面的物理概念，是 Zone 和节点的集合，Zone 和节点具有部署地域（称为 Region）等属性。 而租户则偏向于资源层面的逻辑概念，是在物理节点上划分的资源单元，可以指定其资源规格，包括 CPU、内存、IOPS、日志盘空间等。租户类似于传统数据库的数据库实例，租户通过资源池与资源关联，从而独占一定的资源配额，在租户下可以创建 Database 、表、用户等数据库对象。
 
