--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
@@ -2,7 +2,7 @@
 
 本文介绍如何创建租户。
 
-## 背景信息
+## 前提条件
 
 创建租户需要有可用的资源池，创建资源池需要有相应的资源规格，所以创建租户的一般顺序为：创建资源规格 > 创建资源池 > 创建租户。创建租户之前，请确保有可用的资源池。有关创建资源规格和资源池的详细操作，参见 [创建资源规格](1.create-resource-specifications.md) 和 [创建资源池](2.create-resource-pool.md)。
 
@@ -45,11 +45,11 @@
 
 4. 通过 `CREATE TENANT` 语句，创建租户。
 
-   * 创建一个名为 `mq_t1` 的租户（默认为 MySQL 模式租户），副本数为 2，资源池指定为 `mq_pool_01`，Primary Zone 为 zone1，允许所有 IP 连接数据库。
+   * 创建一个名为 `mq_t1` 的租户（默认为 MySQL 模式租户），副本数为 3，资源池指定为 `mq_pool_01`，Primary Zone 为 zone1，允许所有 IP 连接数据库。
 
         ```sql
         obclient [oceanbase]> CREATE TENANT IF NOT EXISTS mq_t1 
-                        REPLICA_NUM=2, 
+                        REPLICA_NUM=3, 
                         PRIMARY_ZONE='zone1', 
                         RESOURCE_POOL_LIST=('mq_pool_01')
                         set ob_tcp_invited_nodes='%';
@@ -59,7 +59,7 @@
 
         ```sql
         obclient [oceanbase]>CREATE TENANT IF NOT EXISTS oracle_tenant1 
-                        REPLICA_NUM=2, 
+                        REPLICA_NUM=3, 
                         PRIMARY_ZONE='zone1', 
                         RESOURCE_POOL_LIST=('mq_pool_01')
                         SET ob_tcp_invited_nodes='%',
