--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/4.view-tenant-information.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/4.view-tenant-information.md
@@ -2,6 +2,14 @@
 
 本文介绍如何通过视图查看租户以及资源的相关信息。
 
+OceanBase 数据库提供了租户和资源信息相关的视图，可以在系统租户 oceanbase 数据库中通过这些视图查询相关信息。
+
+* `DBA_OB_UNIT_CONFIGS`：展示所有的资源规格信息，包括资源规格 ID、名称、资源配置等。
+* `DBA_OB_RESOURCE_POOLS`：展示所有的资源池信息，包括资源池 ID、名称、绑定租户、Zone 列表等。
+* `DBA_OB_TENANTS`：展示所有租户的配置信息，包括租户 ID、名称、类型、资源等。
+* `GV$OB_UNITS`：展示节点的 Unit 信息，包括节点 IP、端口、资源规格 ID、租户 ID、资源配置等。
+* `GV$OB_SERVERS`：展示节点的资源分配信息，包括节点 IP、端口、归属的 Zone、资源使用情况等。
+
 ## 查看所有资源规格信息
 
 通过 `DBA_OB_UNIT_CONFIGS` 视图，可以查看所有资源规格信息。示例如下：
