--- a/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/3.merge.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/9.storage-architecture/3.dump-and-merge/3.merge.md
@@ -11,7 +11,7 @@
 | 可能包含多个不同版本的数据行。                          | 只包含快照点的版本行。     |
 | 转储只与相同大版本的 Minor SSTable 合并，产生新的 Minor SSTable，所以只包含增量数据，最终被删除的行需要特殊标记。 | 合并会把当前大版本的 SSTable 和 MemTable 与前一个大版本的全量静态数据进行合并，产生新的全量数据。  |
 
-合并虽然比较费时, 但是同时为数据库提供了一个操作窗口，在这个窗口内 OceanBase 数据库可以利用合并特征完整多个计算密集任务, 提升整体资源利用效率。
+合并虽然比较费时, 但是同时为数据库提供了一个操作窗口，在这个窗口内 OceanBase 数据库可以利用合并特征完成多个计算密集任务, 提升整体资源利用效率。
 
 * **数据压缩**
 
