--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/2.automatic-merge-triggering.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/2.automatic-merge-triggering.md
@@ -36,6 +36,6 @@
 
 * [手动触发合并](4.manually-trigger-a-merge.md)
 
-* [手动控制合并](5.manual-control-merge.md)
+* [手动控制合并](5.manually-control-a-merge.md)
 
 * [查看合并过程](5.view-merge-process.md)
