--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/4.manually-trigger-a-merge.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/4.manually-trigger-a-merge.md
@@ -70,13 +70,12 @@
    obclient> ALTER SYSTEM MAJOR FREEZE;
    ```
 
-
 ## 相关阅读
 
 * [自动触发合并](2.automatic-merge-triggering.md)
 
 * [定时触发合并](3.scheduled-trigger-merge.md)
 
-* [手动控制合并](5.manual-control-merge.md)
+* [手动控制合并](5.manually-control-a-merge.md)
 
 * [查看合并过程](5.view-merge-process.md)
