同步V4.0 的修改

--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/6.truncate-partition-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/6.truncate-partition-of-oracle-mode.md
@@ -26,7 +26,7 @@ OceanBase 数据库的 Oracle 模式中，一级分区表和二级分区表对 T
 
 在执行 Truncate 分区操作前，需要了解以下信息：
 
-* Truncate 分区时，请尽量避免待 Truncate 的分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。您可以在 `sys` 租户下，通过视图 `oceanbase.GV$OB_TRANSACTION_PARTICIPANTS` 查询当前还未结束的事务上下文状态。
+* Truncate 分区时，请尽量保证待 Truncate 的分区上不存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。您可以在 `sys` 租户下，通过视图 `oceanbase.GV$OB_TRANSACTION_PARTICIPANTS` 查询当前还未结束的事务上下文状态。
 
 * Oracle 模式下，对于有全局索引的一级或二级分区表，Truncate 分区时，需要通过在 `ALTER TABLE` 语句中添加 `UPDATE GLOBAL INDEXES` 关键字的方式来更新全局索引信息；如果未添加 `UPDATE GLOBAL INDEXES` 关键字，则 Truncate 分区后，该分区表上的全局索引会处于不可用状态。
 
