--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/5.delete-a-partition-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/5.delete-a-partition-of-mysql-mode.md
@@ -38,7 +38,7 @@ ALTER TABLE table_name DROP PARTITION partition_name[, partition_name ...];
     <p>删除一级分区时，可以删除一个或多个分区，但不能删除全部分区。</p>
     </li>
     <li>
-    <p>删除一级分区时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。在 <code>sys</code> 租户下，通过视图 <code>oceanbase.GV$OB_TRANSACTION_PARTICIPANTS</code> 查询当前还未结束的事务上下文状态。</p>
+    <p>删除一级分区时，请尽量保证该分区上不存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。在 <code>sys</code> 租户下，通过视图 <code>oceanbase.GV$OB_TRANSACTION_PARTICIPANTS</code> 查询当前还未结束的事务上下文状态。</p>
     </li>
     <li>
     <p>删除一级分区时，会同时删除分区中的数据，如果只需要删除数据，则可以使用 <code>TRUNCATE</code> 语句。</p>
@@ -133,7 +133,7 @@ ALTER TABLE table_name DROP SUBPARTITION subpartition_name[, subpartition_name .
     <h4>说明</h4>
     <ul>
     <li>
-    <p>删除二级分区表中的二级分区时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。在 <code>sys</code> 租户下，通过视图 <code>oceanbase.GV$OB_TRANSACTION_PARTICIPANTS</code> 查询当前还未结束的事务上下文状态。</p>
+    <p>删除二级分区表中的二级分区时，请尽量保证该分区上不存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。在 <code>sys</code> 租户下，通过视图 <code>oceanbase.GV$OB_TRANSACTION_PARTICIPANTS</code> 查询当前还未结束的事务上下文状态。</p>
     </li>
     <li>
     <p>删除二级分区会同时删除该分区的定义和其中的数据。</p>
