--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/6.truncate-partition-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/6.truncate-partition-of-mysql-mode.md
@@ -38,7 +38,7 @@ ALTER TABLE table_name TRUNCATE PARTITION partition_name[, partition_name ...];
     <p>Truncate 一级分区时，可以将一个或多个分区中的数据清空。</p>
     </li>
     <li>
-    <p>在 Truncate 一级分区时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。在 <code>sys</code> 租户下，通过视图 <code>oceanbase.GV$OB_TRANSACTION_PARTICIPANTS</code> 查询当前还未结束的事务上下文状态。</p>
+    <p>在 Truncate 一级分区时，请尽量保证该分区上不存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。在 <code>sys</code> 租户下，通过视图 <code>oceanbase.GV$OB_TRANSACTION_PARTICIPANTS</code> 查询当前还未结束的事务上下文状态。</p>
     </li>
     <li>
     <p>对于二级分区表，Truncate 一级分区时，会将一个或多个一级分区及其对应的二级分区中的数据全部清空。</p>
@@ -86,7 +86,7 @@ ALTER TABLE table_name TRUNCATE SUBPARTITION subpartition_name[, subpartition_na
     <h4>说明</h4>
     <ul>
     <li>
-    <p>Truncate 二级分区表中的二级分区时，请尽量避免该分区上存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。在 <code>sys</code> 租户下，通过视图 <code>oceanbase.GV$OB_TRANSACTION_PARTICIPANTS</code> 查询当前还未结束的事务上下文状态。</p>
+    <p>Truncate 二级分区表中的二级分区时，请尽量保证该分区上不存在活动的事务或查询，否则可能会导致 SQL 语句报错，或者出现一些异常情况。在 <code>sys</code> 租户下，通过视图 <code>oceanbase.GV$OB_TRANSACTION_PARTICIPANTS</code> 查询当前还未结束的事务上下文状态。</p>
     </li>
     <li>
     <p>当 Truncate 多个二级分区时，这些二级分区必须属于同一个一级分区。</p>
