--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/1.create-resource-specifications.md
@@ -52,10 +52,10 @@
 
    创建资源规格时，MAX_CPU 和 MEMORY_SIZE 必选。
 
-   * MAX_CPU：租户分配的最大的 CPU 规格，所有租户的 MAX_CPU 的总和不能超过该节点 CPU 总容量的超卖值：CPU_CAPACITY * resource_hard_limit。
-   * MIN_CPU：租户分配的最小的CPU规格，所有租户的 MIN_CPU 的总和不能超过该节点 CPU 总容量 CPU_CAPACITY。
-   * MEMORY_SIZE：内存规格，OceanBase 4.0 开始不支持内存超卖。
-   * LOG_DISK_SIZE：日志盘空间，OceanBase 4.0 会按租户管理日志盘空间，系统为各个租户预留日志盘空间，实现按租户隔离。LOG_DISK_SIZE 默认值是 MEMORY_SIZE * 3，最小为 2 G。
+   * MAX_CPU：CPU 规格上限，MIN_CPU 是 CPU 规格下限，单位是核数。如果用户没有指定 MIN_CPU，默认等于 MAX_CPU 值。
+   * MIN_CPU：最小的 CPU 规格，所有租户的 MIN_CPU 的总和不能超过该节点 CPU 总容量 CPU_CAPACITY。
+   * MEMORY_SIZE：内存规格，最小为 1G。OceanBase 4.0 开始不支持内存超卖。
+   * LOG_DISK_SIZE：日志盘空间，OceanBase 4.0 会按租户管理日志盘空间，系统为各个租户预留日志盘空间，实现按租户隔离。当用户没有指定时，LOG_DISK_SIZE 默认值是  内存规格的 3 倍大小，最小为 2G。
    * OceanBase 4.0 支持租户间 IOPS 隔离，通过 MAX_IOPS、MIN_IOPS、IOPS_WEIGHT 三个参数决定。IOPS 规格参数默认不需要指定，系统根据 CPU 规格自动计算。
 
    `CREATE RESOURCE UNIT` 语句的详细说明，请参见 [CREATE RESOURCE UNIT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/7.create-resource-unit.md)。
