--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/2.create-resource-pool.md
@@ -4,7 +4,8 @@
 
 ## 前提条件
 
-创建资源池时需要指定其资源规格。在执行创建资源池操作前，请确认是否有可用的资源规格。有关创建资源规格的详细操作，请参见 [创建资源规格](1.create-resource-specifications.md)。
+* 确认集群是否有足够的可用资源来创建资源池。详细操作，参见 [查看租户和资源信息](4.view-tenant-information.md)。
+* 创建资源池时需要指定其资源规格。在执行创建资源池操作前，请确认是否有可用的资源规格。有关创建资源规格的详细操作，请参见 [创建资源规格](1.create-resource-specifications.md)。
 
 ## 操作步骤
 
