--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.view-and-set-whitelist.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/5.view-and-set-whitelist.md
@@ -1,6 +1,6 @@
 # 设置和查看租户白名单
 
-您可以通过租户白名单功能来设置允许哪些客户端访问当前租户。
+通过租户白名单功能可以设置允许哪些客户端访问当前租户。
 
 ## 背景信息
 
@@ -37,7 +37,7 @@ IP 地址的形式：`10.10.10.10,10.10.10.11`
 
 租户白名单可以通过 sys 租户的管理员用户进行修改，也可以通过本租户的管理员进行修改。
 
-###  sys 租户管理员修改租户白名单
+### sys 租户管理员修改租户白名单
 
 1. 使用 root 用户登录到数据库的 sys 租户。
 
