--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/12.delete-tenant.md
@@ -8,9 +8,7 @@
 
 * 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过租户级回收站功能进一步删除或恢复该租户，租户级回收站相关操作请参见 [租户回收站](../../../7.reference/2.administrator-guide/5.backup-and-recovery/1.flashback/3.tenant-recycle.md)。
 
-* 当系统租户关闭回收站功能时，`DROP TENANT` 操作表示延迟删除租户，后台线程会进行 GC（Garbage Collection）动作，租户的信息仍然可以通过内部表查询。租户具体延迟删除的时间由配置项 `schema_history_expire_time` 控制，默认为 7 天，表示执行 `DROP TENANT` 7 天后，租户会被删除，租户下的数据库和表也同时被删除。
-
-  `schema_history_expire_time` 配置项更多信息请参见 [schema_history_expire_time](../../../7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/180.schema_history_expire_time.md)。
+* 当系统租户关闭回收站功能时，`DROP TENANT` 操作会直接删除租户，租户下的数据库和表也同时被删除。
 
 ## 操作步骤
 
@@ -42,7 +40,7 @@
 
     `DBA_OB_TENANTS` 视图的详细说明，请参见 [oceanbase.DBA_OB_TENANTS](../../../7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/58.oceanbase-dba_ob_tenants-of-mysql-mode.md)
 
-4. （可选）OceanBase 数据库提供了租户级的回收站功能。在系统租户下可以通过 `SET GLOBAL recyclebin = ON;` 开启回收站功能，使用 `show recyclebin` 语句，可以查看当前系统租户回收站中的对象。
+4. （可选）OceanBase 数据库提供了租户级的回收站功能。默认回收站是开启的，可以通过设置租户变量 Recyclebin 的值为 ON/OFF 来控制回收站开关。使用 `SHOW RECYCLEBIN` 语句，可以查看当前系统租户回收站中的对象。
 
     回收站的详细说明，请参见 [回收站](../../../7.reference/1.oceanbase-database-concepts/10.high-data-reliability-and-availability/4.data-protection/4.recycle-bin.md)。
 
