--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/15.delete-resource-specification.md
@@ -1,10 +1,10 @@
-# 删除资源单元
+# 删除资源规格
 
-本文介绍如何删除资源单元。
+本文介绍如何删除资源规格。
 
 ## 前提条件
 
-删除资源单元前必须确保当前资源单元未被使用。如果资源单元正在被使用，则需要先将资源单元从资源池中移出后再删除资源单元。详细操作，请参见 [修改资源池配置](9.modify-resource-pool-properties.md)。
+删除资源规格前必须确保当前资源规格未被使用。如果资源规格正在被使用，则需要先将资源规格从资源池中移出后再删除资源规格。详细操作，请参见 [修改资源池配置](9.modify-resource-pool-properties.md)。
 
 ## 操作步骤
 
@@ -20,12 +20,12 @@
     obclient [(none)]> USE oceanbase;
     ```
 
-3. 通过 `DBA_OB_UNIT_CONFIGS` 和 `DBA_OB_RESOURCE_POOLS` 视图，确认资源规格的使用信息。如果查询结果的 NAME 列中无该资源单元名称，则表示该资源单元未被指定给资源池；如果查询结果的 NAME 列中有该资源单元名称，则表示资源单元已被指定给资源池。示例如下，确认资源规格 `S2_unit_config` 已经不在使用中。
+3. 通过 `DBA_OB_UNIT_CONFIGS` 和 `DBA_OB_RESOURCE_POOLS` 视图，确认资源规格的使用信息。如果查询结果的 NAME 列中无该资源规格名称，则表示该资源规格未被指定给资源池；如果查询结果的 NAME 列中有该资源规格名称，则表示资源规格已被指定给资源池。示例如下，确认资源规格 `S2_unit_config` 已经不在使用中。
 
     ```sql
-    obclient [oceanbase]> SELECT a.UNIT_CONFIG_ID, a.NAME, b.NAME FROM oceanbase.DBA_OB_UNIT_CONFIGS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.UNIT_CONFIG_ID=a.UNIT_CONFIG_ID;
+    obclient [oceanbase]> SELECT a.UNIT_CONFIG_ID, a.NAME AS UNIT_NAME, b.NAME AS POOL_NAME FROM oceanbase.DBA_OB_UNIT_CONFIGS a,oceanbase.DBA_OB_RESOURCE_POOLS b WHERE b.UNIT_CONFIG_ID=a.UNIT_CONFIG_ID;
     +----------------+-------------------------------+--------------------------+
-    | UNIT_CONFIG_ID | NAME                          | NAME                     |
+    | UNIT_CONFIG_ID | UNIT_NAME                     | POOL_NAME                |
     +----------------+-------------------------------+--------------------------+
     |              1 | sys_unit_config               | sys_pool                 |
     |           1001 | config_mysql001_zone1_S1_okz  | pool_mysql001_zone1_okz  |
