--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
@@ -52,7 +52,7 @@
                         REPLICA_NUM=3, 
                         PRIMARY_ZONE='zone1', 
                         RESOURCE_POOL_LIST=('mq_pool_01')
-                        set ob_tcp_invited_nodes='%';
+                        set OB_TCP_INVITED_NODES='%';
         ```
 
    * 创建一个名为 `oracle_tenant1` 的 Oracle 兼容模式租户，需要显式指定 ob_compatibility_mode='oracle';
@@ -62,28 +62,28 @@
                         REPLICA_NUM=3, 
                         PRIMARY_ZONE='zone1', 
                         RESOURCE_POOL_LIST=('mq_pool_01')
-                        SET ob_tcp_invited_nodes='%',
+                        SET OB_TCP_INVITED_NODES='%',
                         ob_compatibility_mode='oracle';
         ```
 
    参数说明：
 
-   * IF NOT EXISTS：可选参数，如果要创建的租户名已存在，并且没有指定 IF NOT EXISTS，则会出现错误。
-   * REPLICA_NUM：指定数据的副本份数。
-   * PRIMARY_ZONE：指定租户的 Primary Zone。
+   * `IF NOT EXISTS`：可选参数，如果要创建的租户名已存在，并且没有指定 IF NOT EXISTS，则会出现错误。
+   * `REPLICA_NUM`：指定数据的副本份数。
+   * `PRIMARY_ZONE`：指定租户的 Primary Zone。
 
-     Primary Zone 表示 Leader 副本的偏好位置。指定 Primary Zone 实际上是指定了 Leader 更趋向于被调度到哪个 Zone 上。Primary Zone 实际上是一个 Zone 的列表，列表中包含多个 Zone。当 Primary Zone 列表包含多个 Zone 时，使用分号（;）分隔的 Zone 具有从高到底的优先级，使用逗号（,）分隔的 Zone 具有相同优先级，表示流量打散在多个 Zone 上，这几个 Zone 同时提供服务。
+     Primary Zone 指定了租户提供读写服务的 Zone 的优先级。Primary Zone 实际上是一个 Zone 的列表，列表中包含多个 Zone。当 Primary Zone 列表包含多个 Zone 时，使用分号（;）分隔的 Zone 具有从高到底的优先级，使用逗号（,）分隔的 Zone 具有相同优先级，表示流量打散在多个 Zone 上，这几个 Zone 同时提供服务。
 
-     例如，`primary_zone ='zone1;zone2,zone3'` 表示该租户的表的分区 Leader 在 zone1 上，zone1 比 zone2、zone3 的优先级高，zone2 和 zone3 是同一优先级。
+     例如，`primary_zone ='zone1;zone2,zone3'` 表示该租户优先由 zone1 提供读写服务，zone1 比 zone2、zone3 的优先级高，zone2 和 zone3 是同一优先级。
 
      <main id="notice" type='notice'>
       <h4>注意</h4>
       <p>在指定 PRIMARY_ZONE 时，其值可以设置为 RANDOM（必须大写），表示随机选择最高优先级内的任意一个 Zone 作为 Primary Zone。</p>
      </main>
 
-   * RESOURCE_POOL_LIST：创建租户时的必填项，创建租户时仅支持分配一个资源池。如果需要为租户添加多个资源池，则可以待租户创建成功后通过修改租户资源池的方式再进行添加。
-   * ob_tcp_invited_nodes：用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。示例中 `%` 表示所有客户端都可登录，如果不调整 ob_tcp_invited_nodes 的值，则默认租户的连接方式为只允许本机的 IP 连接数据库。白名单的详细介绍，参见 [查看和设置白名单](4.view-and-set-whitelist.md)。
-   * ob_compatibility_mode：用于指定租户的兼容模式，可选择 MySQL 或 Oracle 兼容模式，并且只能在创建时指定。如果不指定 ob_compatibility_mode，则默认兼容模式为 MySQL 模式。
+   * `RESOURCE_POOL_LIST`：指定分配给租户的资源池列表，必填。如果有多个资源池，要求多个资源池的 UNIT_NUM 个数一致。
+   * `OB_TCP_INVITED_NODES`：用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。示例中 `%` 表示所有客户端都可登录，如果不指定 OB_TCP_INVITED_NODES 的值，则默认租户的连接方式为只允许本机的 IP 登录该租户。白名单配置的详细介绍，参见 [查看和设置白名单](4.view-and-set-whitelist.md)。
+   * `OB_COMPATIBILITY_MODE`：用于指定租户的兼容模式，可选择 MySQL 或 Oracle 兼容模式，并且只能在创建时指定。如果不指定 OB_COMPATIBILITY_MODE，则默认兼容模式为 MySQL 模式。
 
    `CREATE TENANT` 语句的详细说明，请参见 [CREATE TENANT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
 
@@ -99,7 +99,9 @@
     1 row in set
     ```
 
-6. 租户创建成功后，默认其管理员用户（MySQL 模式为 root，Oracle 模式为 sys）的密码为空，您需要及时修改管理员用户的密码。
+6. 租户创建成功后，可以尝试登录租户进行使用。
+
+   默认管理员用户（MySQL 模式为 root，Oracle 模式为 sys）的密码为空，您需要及时修改管理员用户的密码。
 
     * MySQL 兼容模式
 
@@ -118,13 +120,13 @@
 
     * Oracle 兼容模式
 
-      1. 登录 `moracle_tenant1` 租户的 sys 用户。
+      3. 登录 `moracle_tenant1` 租户的 sys 用户。
 
           ```sql
           $obclient -h172.30.xx.xx -P2883 -usys@oracle_tenant1#cluster  -A
           ```
 
-      2. 执行以下语句修改 root 用户的密码。
+      4. 执行以下语句修改 root 用户的密码。
 
           ```sql
           obclient [SYS]> ALTER USER sys IDENTIFIED BY '****';
