--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/7.modify-system-variables-of-tenant.md
@@ -12,6 +12,8 @@
    <p>设置 Global 级别变量要求当前用户拥有 SUPER 权限或 ALTER SYSTEM 权限。</br>设置前，请确认您的权限。用户权限的详细说明，参见 <a xref="../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/1.users-and-permissions/1.users-and-their-permissions.md">用户权限概述</a>。</p>
   </main>
 
+下文示例中的系统变量 `ob_query_timeout` 用于设置对 SQL 语句进行查询操作的超时时间，单位是微秒。在进行大数据查询操作时，就可以通过调大系统变量 `ob_query_timeout` 的值，避免查询超时导致语句执行失败。
+
 ## 修改 Session 级别的系统变量
 
 1. 使用 root 用户登录到数据库的用户租户。
@@ -23,8 +25,6 @@
     ```
 
 2. 查询租户 Session 级别的系统变量。
-
-   本示例以系统变量 `ob_query_timeout` 为例。
 
       ```sql
       obclient [(none)]> SHOW VARIABLES LIKE 'ob_query_timeout';
