--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/8.modify-resource-specifications.md
@@ -47,10 +47,7 @@
 
 5. 查看 `DBA_OB_UNIT_CONFIGS` 视图，确认资源规格配置修改完成。
 
-    ```sql
-    obclient [oceanbase]> ALTER RESOURCE UNIT S1_unit_config MAX_CPU 2, MEMORY_SIZE '4G';
-    Query OK, 0 rows affected (0.003 sec)
-
+    ```sql  
     obclient [oceanbase]> SELECT * FROM DBA_OB_UNIT_CONFIGS WHERE NAME = 'S1_unit_config';
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     | UNIT_CONFIG_ID | NAME           | CREATE_TIME                | MODIFY_TIME                | MAX_CPU | MIN_CPU | MEMORY_SIZE | LOG_DISK_SIZE | MAX_IOPS | MIN_IOPS | IOPS_WEIGHT |
@@ -59,3 +56,8 @@
     +----------------+----------------+----------------------------+----------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
     1 row in set
     ```
+
+    <main id="notice" type='notice'>
+        <h4>注意</h4>
+        <p>如果是租户已经在使用的资源规格，实际修改生效的情况需要通过视图 GV$OB_UNITS 查看对应租户的 Unit 是否完成规格修改。因为修改规格是异步的过程，真正生效需要由各个 Server 决定。</p>
+    </main>
