--- a/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
+++ b/zh-CN/6.manage/2.tenant-management/5.commom-tenant-operations/3.create-tenant.md
@@ -120,18 +120,32 @@
 
     * Oracle 兼容模式
 
-      3. 登录 `moracle_tenant1` 租户的 sys 用户。
+      1. 登录 `moracle_tenant1` 租户的 sys 用户。
 
           ```sql
           $obclient -h172.30.xx.xx -P2883 -usys@oracle_tenant1#cluster  -A
           ```
 
-      4. 执行以下语句修改 root 用户的密码。
+      2. 执行以下语句修改 sys 用户的密码。
 
           ```sql
           obclient [SYS]> ALTER USER sys IDENTIFIED BY '****';
           Query OK, 0 rows affected
           ```
+
+7. 管理员用户密码修改成功后，重新登录租户。
+
+    * MySQL 兼容模式
+
+        ```sql
+        $obclient -h172.30.xx.xx -P2883 -uroot@mq_t1#cluster -p**** -A
+        ```
+
+    * Oracle 兼容模式
+
+        ```sql
+        $obclient -h172.30.xx.xx -P2883 -usys@oracle_tenant1#cluster -p**** -A
+        ```
 
 ## 更多信息
 
