根据欧沈的意见修改

--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/4.manually-trigger-a-merge.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/4.manually-trigger-a-merge.md
@@ -26,7 +26,7 @@
 
 ## 系统租户手动发起合并
 
-系统租户可以对所有租户或指定租户发起合并操作。
+系统租户可以对本租户、所有租户或指定租户发起合并操作。
 
 具体操作如下：
 
@@ -44,6 +44,12 @@
 
    示例如下：
 
+   * 系统租户对本租户发起合并
+
+      ```sql
+      obclient> ALTER SYSTEM MAJOR FREEZE TENANT;
+      ```
+   
    * 对所有租户发起合并
 
       ```sql
