--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/5.manually-control-a-merge.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/2.merge-management/5.manually-control-a-merge.md
@@ -2,7 +2,7 @@
 
 通过 `MAJOR FREEZE` 命令触发合并后，系统会自动调度合并任务。不同于 OceanBase 数据库 V2.X.X 和 V3.X.X 版本，在 OceanBase 数据库 V4.0.X 版本中，合并将采用统一合并策略来执行合并流程，即租户的所有 Zone 同时开始执行合并，且所有 Zone 均完成合并后，才表示该租户完成合并。
 
-合并过程中，不再需要您手动控制各个 Zone 的合并顺序等事项，也不存在轮转合并。如果在合并过程中出现错误，可以参考本文手动控制合并。例如，Checksum 校验出错，Checksum 校验出错，会使得该租户当前轮次的合并无法结束，您可以暂停当前合并(suspend merge), 待 Checksum 恢复正确以后（例如，人工介入修复），再清理 Checksum 错误的标记（clear merge error）, 然后继续执行当前轮次的合并 (resume merge)。
+合并过程中，不再需要您手动控制各个 Zone 的合并顺序等事项，也不存在轮转合并。如果在合并过程中出现错误，可以参考本文手动控制合并。例如，Checksum 校验出错，会使得该租户当前轮次的合并无法结束，您可以暂停当前合并(suspend merge), 待 Checksum 恢复正确以后（例如，人工介入修复），再清理 Checksum 错误的标记（clear merge error）, 然后继续执行当前轮次的合并 (resume merge)。
 
 ## 系统租户手动控制合并
 
