--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/4.add-a-node.md
@@ -6,9 +6,9 @@
 
 * 调整部署场景：调整部署场景，包括将集群的部署方式从同城三中心调整为三地五中心，以及机房裁撤场景下将 Zone 从一个机房搬迁到另一个机房。该场景需要先增加 Zone，再在该 Zone 内增加节点，然后调整租户的 Locatity 属性。
 
-OceanBase 数据库的弹性扩容能力相比于传统数据库具有明显的技术优势。传统数据库的数据存放于一台机器上，而 OceanBase 数据库能够把数据打散到不同机器，从而能够解决可扩展性的问题，真正体现出分布式架构的优势。当集群或者租户的容量不足时，只需要增加更多的节点，集群就能够容纳更多的租户，租户也能够容纳更多的数据和业务流量。同样，在集群或者租户的容量富余时，也可以将节点下线，从而降低成本。
+OceanBase 数据库的弹性扩容能力相比于传统数据库具有明显的架构优势。传统数据库的数据存放于一台机器上，而 OceanBase 数据库能够把数据打散到不同机器，从而能够解决可扩展性的问题，真正体现出分布式架构的优势。当集群或者租户的容量不足时，只需要增加更多的节点，集群就能够容纳更多的租户，租户也能够容纳更多的数据和业务流量。同样，在集群或者租户的容量富余时，也可以将节点下线，从而降低成本。
 
-多副本部署能力同样是 OceanBase 数据库相比于传统数据库的技术优势，多副本部署能力是 OceanBase 数据库具备多级无损容灾能力的基础，包括单机级无损容灾、机房级无损容灾、城市级无损容灾等能力。此外，OceanBase 数据库支持灵活地调整集群部署架构，从而可以满足业务场景的技术演进。
+多副本部署能力同样是 OceanBase 数据库相比于传统数据库的架构优势，多副本部署能力是 OceanBase 数据库具备多级无损容灾能力的基础，包括单机级无损容灾、机房级无损容灾、城市级无损容灾等能力。此外，OceanBase 数据库支持灵活地调整集群部署架构，从而可以满足业务场景的技术演进。
 
 ## 前提条件
 
