--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/12.view-cluster-parameters.md
@@ -16,7 +16,7 @@
 
 ## 通过 SHOW 语句查看集群配置项
 
-系统租户（即 `sys` 租户）和用户租户均可以通过 SHOW 语句查看集群级配置项的值。
+系统租户（即 `sys` 租户）和用户租户均可以通过 SHOW 语句查看集群配置项的值。同时，系统租户还可以通过指定 `TENANT` 关键字来查看指定租户的配置项信息。
 
 1. 系统租户或用户租户登录到集群。
 
@@ -33,15 +33,29 @@
    语句如下：
 
    ```sql
-   obclient [xxx]> SHOW PARAMETERS [SHOW_PARAM_OPTS];
+   obclient [xxx]> SHOW PARAMETERS [SHOW_PARAM_OPTS] [TENANT = tenant_name];
    ```
 
-   其中，`[SHOW_PARAM_OPTS]` 可指定为 `[LIKE 'pattern' | WHERE expr]`，`WHERE expr` 中可以指定的列属性与 `SHOW PARAMETERS` 返回结果中的列属性一致。
+   其中:
+   
+   * `[SHOW_PARAM_OPTS]` 可指定为 `[LIKE 'pattern' | WHERE expr]`，`WHERE expr` 中可以指定的列属性与 `SHOW PARAMETERS` 返回结果中的列属性一致。
+
+   * 指定 `TENANT` 关键字可以查看指定租户的配置项信息。
 
    示例如下：
 
    ```sql
    obclient [(none)]> SHOW PARAMETERS LIKE '%syslog_level%';
+   +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
+   | zone  | svr_type | svr_ip         | svr_port | name         | data_type | value | info                                                                                                                   | section  | scope   | source  | edit_level        |
+   +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
+   | zone2 | observer | 172.xx.xx.xx   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   | zone3 | observer | 172.xx.xx.xx   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   | zone1 | observer | 172.xx.xx.xx   |     2882 | syslog_level | NULL      | PERF  | specifies the current level of logging. There are DEBUG, TRACE, INFO, WARN, USER_ERR, ERROR, six different log levels. | OBSERVER | CLUSTER | DEFAULT | DYNAMIC_EFFECTIVE |
+   +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
+   3 rows in set
+
+   obclient [(none)]> SHOW PARAMETERS LIKE '%syslog_level%' TENANT = mysql001;
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
    | zone  | svr_type | svr_ip         | svr_port | name         | data_type | value | info                                                                                                                   | section  | scope   | source  | edit_level        |
    +-------+----------+----------------+----------+--------------+-----------+-------+------------------------------------------------------------------------------------------------------------------------+----------+---------+---------+-------------------+
