--- a/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/13.modify-cluster-parameters.md
+++ b/zh-CN/6.manage/1.clutser-management/2.common-cluster-operations/13.modify-cluster-parameters.md
@@ -4,7 +4,7 @@
 
 <main id="notice" type='notice'>
             <h4>注意</h4>
-            <p>系统租户（即 <code>sys</code> 租户），可以查看和设置集群配置项，用户租户只能查看集群配置项，无法设置集群配置项。</p>
+            <p>系统租户（即 <code>sys</code> 租户），可以查看和设置集群级配置项，用户租户只能查看集群级配置项，无法设置集群级配置项。</p>
           </main>
 
 有关配置项的更多说明，请参见 [系统配置项概述](../../../7.reference/5.system-reference/1.system-configuration-items/1.system-configuration-items-overview-2.md)。
@@ -45,8 +45,9 @@
 
    ```sql
    obclient [(none)]> ALTER SYSTEM [SET]
-       parameter_name = expression [SCOPE = {MEMORY | SPFILE | BOTH}]
+       parameter_name = expression [SCOPE = {SPFILE | BOTH}]
           [COMMENT [=] 'text']
+            [ TENANT [=] ALL|tenant_name ]
             [SERVER [=] 'svr_ip:svr_port' | ZONE [=] 'zone'];
    ```
 
@@ -56,11 +57,15 @@
 
    * `SCOPE` 用于指定本次配置项修改的生效范围，默认值为 `BOTH`。其中：
 
-     * `MEMORY`：表示仅修改内存中的配置项，修改立即生效，且本修改在 OBServer 服务器重启以后会失效（当前暂无配置项支持该方式）。
-
      * `SPFILE`：表示仅修改配置表中的配置项值，当 OBServer 服务器重启以后才生效。
 
      * `BOTH`：表示既修改配置表，又修改内存值，修改后立即生效，且 OBServer 重启以后配置值仍然生效。
+
+   * `TENANT`：用于系统租户修改所有租户或指定租户的租户级配置项。
+
+     * `ALL`：所有租户。
+
+     * `tenant_name`：指定租户的租户名。
 
    * `SERVER` 表示指定集群中要修改的 OBServer 服务器，`ZONE` 表示指定集群中要修改的 Zone。`ALTER SYSTEM` 语句不能同时指定 Zone 和 Server。并且在指定 Zone 时，仅支持指定一个 Zone；指定 Server 时，仅支持指定一个 Server。如果修改集群级配置项时，不指定 Zone 也不指定 Server，则表示该修改在整个集群内生效。
 
@@ -76,6 +81,8 @@
 
     ```sql
     obclient [(none)]> ALTER SYSTEM SET syslog_level='ERROR' SCOPE = SPFILE;
+
+    obclient [(none)]> ALTER SYSTEM SET log_disk_utilization_threshold = 20 TENANT='ALL';
 
     obclient [(none)]> ALTER SYSTEM SET system_memory = '50G' ZONE = 'zone1';
 
